--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,6 +1,7 @@
 .page {
   font-size: 16px;
   font-family: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  background-color: #ededed;
 }
 
 .page-lock::before {
