--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,9 +1,10 @@
 .container {
   box-sizing: border-box;
   width: 100%;
-  max-width: 1430px;
+  max-width: 1240px;
   margin: 0 auto;
   padding: 0 15px;
+  position: relative;
 
   @include vp-767 {
     padding: 0 15px;
