feat: добавлят секцию

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -23,8 +23,8 @@
 }
 
 .hero__img {
-    width: 500px;
-    height: 500px;
+    // width: 500px;
+    // height: 500px;
 
     @include vp-767 {
         width: 100%;
