--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,4 +29,6 @@
 // Sections
 // ----------------------------------
 @import "blocks/hero";
+@import "blocks/about";
+@import "blocks/services";
 // ----------------------------------
