--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -45,7 +45,7 @@
     left: 0;
     width: 25px;
     height: 25px;
-    background: url('../../img/svg/icons-check.svg') no-repeat center;
+    background: url('../img/svg/icons-check.svg') no-repeat center;
     background-size: contain;
 }
 
