--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -12,7 +12,7 @@
 
 .services__wrapper {
     position: relative;
-    background: url('../../img/bg-1.jpg') no-repeat fixed 100% / cover;
+    background: url('../img/bg-1.jpg') no-repeat fixed 100% / cover;
     padding: 50px 0;
 }
 
