--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -19,7 +19,7 @@
 
   @include vp-1200 {
     position: absolute;
-    top: 0;
+    top: -20px;
     right: 0;
     transform: translateX(100%);
     height: 100vh;
