--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,6 +1,7 @@
 .hero {
-    padding: 70px 0;
+    padding: 70px 0 0 0;
     color: $color-shaft;
+    background-color: #fff;
 }
 
 .hero__item {
@@ -42,6 +43,7 @@
     text-align: center;
     font-size: 48px;
     line-height: 1.1;
+    color: $color-shaft;
 
     @include vp-767 {
         font-size: 28px;
