--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,23 +1,10 @@
 .services {
     padding: 70px 0;
-}
-
-.services__title {
-    font-size: 42px;
-    font-weight: 500;
-    line-height: 1.1;
-    margin: 0 0 50px 0;
-    text-align: center;
-}
-
-.services__wrapper {
     position: relative;
     background: url('../img/bg-1.jpg') no-repeat fixed 100% / cover;
-    padding: 50px 0;
 }
 
-
-.services__wrapper::before {
+.services::before {
     position: absolute;
     content: "";
     top: 0;
@@ -25,6 +12,18 @@
     width: 100%;
     height: 100%;
     background-color: rgba(5, 25, 34, 0.7);
+}
+
+
+.services__title {
+    font-size: 42px;
+    font-weight: 500;
+    line-height: 1.1;
+    margin: 0 0 50px 0;
+    text-align: center;
+    color: $color-default-white;
+    position: relative;
+    z-index: 1;
 }
 
 .services__list {
@@ -50,6 +49,11 @@
     border: 2px solid $color-silver;
     border-radius: 3px;
     color: $color-default-white;
+}
+
+.services__item h3 {
+    font-weight: 500;
+    font-size: 24px;
 }
 
 .services__cost {
