--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,4 +31,6 @@
 @import "blocks/hero";
 @import "blocks/about";
 @import "blocks/services";
+@import "blocks/result";
+@import "blocks/stages";
 // ----------------------------------
