--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -35,3 +35,21 @@
 .icon-whatsapp {
     margin-right: 10px;
 }
+
+.scroll-top {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    color: $color-red;
+    border: 2px solid #bf3f3f;
+    border-radius: 100%;
+    cursor: pointer;
+    position: fixed;
+    bottom: 20%;
+    right: 30px;
+    display: none;
+}
+
+.scroll-top.is-active {
+    display: block;
+}
