feat: добавляет анимацию

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "vendor/normalize";
 @import "vendor/swiper";
 @import "vendor/fontello";
+@import "vendor/animate";
 
 // Global
 // ---------------------------------
