--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -8,6 +8,11 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 40px;
+
+    @include vp-767 {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
 }
 
 .footer__item p {
