--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,4 +34,6 @@
 @import "blocks/services";
 @import "blocks/result";
 @import "blocks/stages";
+@import "blocks/main";
+@import "blocks/format";
 // ----------------------------------
